# DeepSA

./: .gitignore  DeepSA.py  DeepSA.yml  DeepSA_predict.py  DeepSA_training.py  LICENSE  MANIFEST.in  PACKAGING.md  README.md  README.rst  conda_env.list  pyproject.toml  setup.py
DeepSA/: assets.json  config.json  config.yaml  data_processors.pkl  df_preprocessor.pkl  hparams.yaml
DeepSA/common/: DeepSA_ROC.py  DeepSA_predictor.py  DeepSA_training.py  Fingerprint_validate.py  cross_validate.py  fingerprint_training.py
DeepSA/data/: data_expand.py
DeepSA/hf_text/: added_tokens.json  special_tokens_map.json  tokenizer.json  tokenizer_config.json
DeepSA/model/: training.py
DeepSA/utils/: ROC.py
DeepSA_model/: config.yaml
data/: TS1.csv  TS2.csv  TS3.csv  test_set.list
deepsa/: __init__.py  cli.py  predictor.py  trainer.py  utils.py
deepsa/model/: data_processors.pkl
deepsa/model/hf_text/: config.json
examples/: advanced_usage.py  simple_predict.py
tests/: test_basic.py
